# TaskKhalReschedulWarrior

./: .gitignore  CODE_OF_CONDUCT.md  README.md  config.ini  constants.py  events.py  helpers.py  logger.py  main.py  requirements.txt  tasks.py
hooks/: on-add.khal  on-modify.khal
rust/: Cargo.toml
rust/src/: main.rs  structs.rs
src/: constants.py  events.py  helpers.py  logger.ini
