[package]
name = "task_khal_reschedul_warrior"
version = "0.1.0"
authors = ["chess7th"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.9"
ics = "0.4"
chrono = "0.4"
